plugins {
	id 'fabric-loom' version '1.11.+'
	id "com.modrinth.minotaur" version "2.+"
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
group = project.maven_group


if (System.getenv("CI") != null) {
	if (System.getenv("RELEASE") != null) {
		version = project.mod_version
	} else {
		version = project.mod_version + "-dev.build." + System.getenv("GITHUB_RUN_NUMBER")
	}
} else {
	version = project.mod_version + "-dev.local"
}

version = version + "+" + project.minecraft_version

loom {
	runs {
		datagen {
			server()
			name = "Data Generation"
			runDir = "build/datagen"
			vmArg("-Dfabric-api.datagen")
			vmArg("-Dfabric-api.datagen.modid=polyfactory")
			vmArg("-Dfabric-api.datagen.output-dir=${file("src/main/generated")}")
		}
	}
	accessWidenerPath = file("src/main/resources/polyfactory.accesswidener")
}


sourceSets {
	main {
		resources {
			srcDirs += [
					"src/main/generated"
			]
		}
	}
}

jar {
	processResources.exclude('**/*.xcf')
	processResources.exclude('.cache/**/*')
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven { url 'https://maven.nucleoid.xyz' }
	maven { url 'https://maven.kneelawk.com/releases/' }
	maven { url "https://maven.alexiil.uk/" }
	maven { url "https://api.modrinth.com/maven/" }
	maven { url = "https://jitpack.io" }
	maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
	mavenLocal()
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation "eu.pb4:polymer-core:${project.polymer_version}"
	modImplementation "eu.pb4:polymer-blocks:${project.polymer_version}"
	modImplementation "eu.pb4:polymer-resource-pack:${project.polymer_version}"
	modImplementation "eu.pb4:polymer-resource-pack-extras:${project.polymer_version}"
	modImplementation "eu.pb4:polymer-autohost:${project.polymer_version}"
	modImplementation "eu.pb4:polymer-virtual-entity:${project.polymer_version}"
	//modImplementation "eu.pb4:polymer-sound-patcher:${project.polymer_version}"
	modImplementation include('eu.pb4:map-canvas-api:0.6.0+1.21.9')
	modImplementation include('eu.pb4:common-protection-api:1.0.0')
	modImplementation include('eu.pb4:sidebar-api:0.5.1+1.21.1')
	modImplementation include('eu.pb4:sgui:1.11.0+1.21.9')
	modImplementation include('eu.pb4:factorytools:0.8.2+1.21.10')
	//modImplementation include('com.kneelawk.graphlib:graphlib-core-fabric:2.0.3-beta.1+1.21.5')
	modImplementation include('com.kneelawk.graphlib:graphlib-core-fabric:2.0.3-beta.0.patbox.test+1.21.9')

	// Temp hack to allow development
	//modImplementation include('com.kneelawk:graphlib:1.99.99+1.20.local')
	//modImplementation include('alexiil.mc.lib:libnetworkstack-base:0.11.0-aaa.patbox')

	modCompileOnly 'maven.modrinth:polydex:1.3.0+1.21.2'
	//modCompileOnly 'eu.pb4:polydex:1.2.3-dev2+1.21'
	// Uncomment the following line to enable the deprecated Fabric API modules.
	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.

	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
}

processResources {
	doLast {
		fileTree(dir: outputs.files.asPath, include: ["**/*.json", "**/*.mcmeta"]).each {
			File file -> file.text = com.google.gson.JsonParser.parseString(file.text).toString()
		}
	}
}

classes {
	doLast {
		fileTree(dir: project.sourceSets.main.output.classesDirs.asPath, include: ["**/*.json", "**/*.mcmeta"]).each {
			File file -> file.text = com.google.gson.JsonParser.parseString(file.text).toString()
		}
	}
}

remapJar {
	doLast {
		fileTree(dir: outputs.files.asPath, include: ["**/*.json", "**/*.mcmeta"]).each {
			File file -> file.text = com.google.gson.JsonParser.parseString(file.text).toString()
		}
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

if (System.getenv("MODRINTH")) {
	modrinth {
		token = System.getenv("MODRINTH")
		projectId = 'MikpSrAF'// The ID of your modrinth project, slugs will not work.
		versionNumber = "" + version // The version of the mod to upload.
		versionType = "release"
		uploadFile = remapJar // This links to a task that builds your mod jar and sets "uploadFile" to the mod jar.
		gameVersions = [((String) project.minecraft_version)]
		changelog = System.getenv("CHANGELOG")
		loaders = ["fabric", "quilt"]

		dependencies {
			required.project "polymer"
			optional.project "polydex"
		}
	}

	remapJar {
		finalizedBy project.tasks.modrinth
	}
}
